apps/test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "test-svc"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: test-svc
          servicePort: 8080
